# coursework1

./: .env_example  .gitignore  README.md  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
