[project]
name = "coursework1"
version = "0.1.0"
description = ""
authors = [
    {name = "Akmal Khamdullaev",email = "akm992@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"
mypy = "^1.18.2"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"

