[project]
name = "coursework_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Akmal Khamdullaev",email = "akm992@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "greeting (>=1.0.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"
mypy = "^1.18.2"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv",
    ".*/venv",
    "build",
    "dist"
]

